creusot/tests/should_fail/prusti/deref/make_ref.stderr
error[creusot]: invalid box dereference of zombie expression
  --> make_ref.rs:14:32
   |
14 | #[ensures({let x = x.mk_ref(); x.0 == result})]
   |                                ^

error: aborting due to previous error

